--- a/css/style-for-dev.css
+++ b/css/style-for-dev.css
@@ -39,7 +39,8 @@ also see 2.9 for manuscript colors
 /* 1.1. Main Components */
 
 html{
-	font: 16px Georgia, 'Times New Roman', Times, serif;
+	/* font: 16px Georgia, 'Times New Roman', Times, serif; */
+	font: 16px "Trebuchet MS", Helvetica, sans-serif;
 	font-weight: normal;
 	color: #191716;
 	padding: 0 1em;
@@ -60,13 +61,16 @@ body{
 }
 @media only screen and (min-width: 768px){
 	body{
-		font-size: .95em;
-		max-width: 46em;
+		/*font-size: .95em;
+		max-width: 46em;*/
+		font-size: 1.1em;
+		max-width: 40em;
 	}
 }
 @media only screen and (min-width: 992px){
 	body{
-		max-width: 42em;
+		/*max-width: 42em;*/
+		max-width: 36em;
 	}
 	body.fixed-nav{
 		padding-top: 0 !important;
@@ -76,17 +80,21 @@ body.essay .main{
 	padding-bottom: 1em;
 }
 h1{
-	font-size: 2em;
-	font-family: Georgia, 'Times New Roman', Times, serif;
+	/* font-size: 2em; */
+	/* font-family: Georgia, 'Times New Roman', Times, serif; */
+	font-size: 2.6em;
+	font-family: 'sansita_swashedlight';
 }
 @media only screen and (min-width: 768px){
 	h1{
-		font-size: 2.2em;
+		/* font-size: 2.2em; */
+		font-size: 2.8em;
 	}
 }
 @media only screen and (min-width: 992px){
 	h1{
-		font-size: 2.3em;
+		/* font-size: 2.3em; */
+		font-size: 2.9em;
 	}
 }
 h2{
@@ -131,6 +139,14 @@ h5.books::after{
 	font-family: 'FontAwesome';
 	content: '\f100';
 	padding-left: .5em;
+}
+.main-divider{
+	display: none;
+}
+@media only screen and (min-width: 992px){
+	.main-divider{
+		width: 80%;
+	}
 }
 /* adds padding for h4 labelled subsections in essays */
 .subsection{
@@ -388,7 +404,8 @@ img,
 }
 @media only screen and (min-width: 768px){
 	.footer{
-		font-size: 1em;
+		/* font-size: 1em; */
+		font-size: .95em;
 	}
 }
 *:focus{
@@ -419,6 +436,15 @@ a:hover img,
 a:focus img{
 	border: 3px #2e68ac solid;
 }
+@font-face {
+    font-family: 'sansita_swashedlight';
+    src: url('../fonts/sansitaswashed-variablefont_wght-webfont.woff2') format('woff2'),
+         url('../fonts/sansitaswashed-variablefont_wght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 
 
 /* 1.2. Mobile Fixed Nav */
@@ -501,18 +527,22 @@ a:focus img{
 	margin: -1px -7px;
 }
 .nav-title{
-	font-size: 1.7em;
-	font-family: Georgia, 'Times New Roman', Times, serif;
+	/* font-size: 1.7em; */
+	/* font-family: Georgia, 'Times New Roman', Times, serif; */
+	font-size: 2em;
+	font-family: 'sansita_swashedlight';
 	font-weight: 600;
 }
 @media only screen and (min-width: 480px){
 	.nav-title{
-		font-size: 2em;
+		/* font-size: 2em; */
+		font-size: 2.4em;		
 	}
 }
 @media only screen and (min-width: 768px){
 	.nav-title{
-		font-size: 2.5em;
+		/* font-size: 2.5em; */
+		font-size: 2.7em;
 	}
 }
 [id]:target {
