--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,3 @@
-.lato{
-font-family: 'latoregular';
-}
-.sourcesanspro{
-font-family: 'source_sans_proregular';
-}
-.roboto{
-font-family: 'robotoregular';
-}
-.rubik{
-	font-family: 'rubiklight';
-}
-.nunitosans{
-	font-family: 'nunito_sansregular';
-}
-.nunito{
-	font-family: 'nunitoregular';
-}
-.karla{
-	font-family: 'karlaregular';
-}
-
 img {
 	filter: grayscale(100%);
 }
@@ -87,7 +65,7 @@ also see 2.9 for manuscript colors
 
 html{
 	/* font: 16px Georgia, 'Times New Roman', Times, serif; */
-	font: 16px "Trebuchet MS", Helvetica, sans-serif;
+	font: 16px 'source_sans_proregular', Helvetica, sans-serif;
 	font-weight: normal;
 	color: #191716;
 	padding: 0 1em;
@@ -452,7 +430,7 @@ img,
 }
 .footer{
 	font-size: 1em;
-	font-family: Arial, Geneva, Tahoma, sans-serif;
+	/* font-family: Arial, Geneva, Tahoma, sans-serif; */
 	text-align: center;
 	line-height: 1.6em;
 	padding-top: 1em;
@@ -460,7 +438,7 @@ img,
 @media only screen and (min-width: 768px){
 	.footer{
 		/* font-size: 1em; */
-		font-size: .95em;
+		/* font-size: .95em; */
 	}
 }
 *:focus{
@@ -506,104 +484,22 @@ a:focus img{
 	font-style: normal;
 	font-display: block;
 }
-/*logo unused*/
+/*main text & footer*/
 @font-face {
-    font-family: 'sansita_swashedlight';
-    src: url('../fonts/sansitaswashed-variablefont_wght-webfont.woff2') format('woff2'),
-         url('../fonts/sansitaswashed-variablefont_wght-webfont.woff') format('woff');
+    font-family: 'source_sans_proregular';
+    src: url('../fonts/sourcesanspro-regular-webfont.woff2') format('woff2'),
+         url('../fonts/sourcesanspro-regular-webfont.woff') format('woff');
     font-weight: normal;
-    font-style: normal;
-    font-display: block;
+	font-style: normal;
+	font-display: block;
 }
-/*sans serif - lato*/
-@font-face {
-    font-family: 'latoblack';
-    src: url('../fonts/lato-black-webfont.woff2') format('woff2'),
-         url('../fonts/lato-black-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'latoblack_italic';
-    src: url('../fonts/lato-blackitalic-webfont.woff2') format('woff2'),
-         url('../fonts/lato-blackitalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'latobold';
-    src: url('../fonts/lato-bold-webfont.woff2') format('woff2'),
-         url('../fonts/lato-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'latobold_italic';
-    src: url('../fonts/lato-bolditalic-webfont.woff2') format('woff2'),
-         url('../fonts/lato-bolditalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'latoitalic';
-    src: url('../fonts/lato-italic-webfont.woff2') format('woff2'),
-         url('../fonts/lato-italic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'latolight';
-    src: url('../fonts/lato-light-webfont.woff2') format('woff2'),
-         url('../fonts/lato-light-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'latolight_italic';
-    src: url('../fonts/lato-lightitalic-webfont.woff2') format('woff2'),
-         url('../fonts/lato-lightitalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'latoregular';
-    src: url('../fonts/lato-regular-webfont.woff2') format('woff2'),
-         url('../fonts/lato-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'latohairline';
-    src: url('../fonts/lato-thin-webfont.woff2') format('woff2'),
-         url('../fonts/lato-thin-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'latohairline_italic';
-    src: url('../fonts/lato-thinitalic-webfont.woff2') format('woff2'),
-         url('../fonts/lato-thinitalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-/*sans serif - source sans pro */
-@font-face {
+/*source sans pro - additional variants */
+/* @font-face {
     font-family: 'source_sans_problack';
     src: url('../fonts/sourcesanspro-black-webfont.woff2') format('woff2'),
          url('../fonts/sourcesanspro-black-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'source_sans_problack_italic';
@@ -611,7 +507,6 @@ a:focus img{
          url('../fonts/sourcesanspro-blackitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'source_sans_probold';
@@ -619,7 +514,6 @@ a:focus img{
          url('../fonts/sourcesanspro-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'source_sans_probold_italic';
@@ -627,7 +521,6 @@ a:focus img{
          url('../fonts/sourcesanspro-bolditalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'source_sans_proextralight';
@@ -635,7 +528,6 @@ a:focus img{
          url('../fonts/sourcesanspro-extralight-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'source_sans_proXLtIt';
@@ -643,7 +535,6 @@ a:focus img{
          url('../fonts/sourcesanspro-extralightitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'source_sans_proitalic';
@@ -651,7 +542,6 @@ a:focus img{
          url('../fonts/sourcesanspro-italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'source_sans_prolight';
@@ -659,7 +549,6 @@ a:focus img{
          url('../fonts/sourcesanspro-light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'source_sans_prolight_italic';
@@ -667,15 +556,6 @@ a:focus img{
          url('../fonts/sourcesanspro-lightitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
-}
-@font-face {
-    font-family: 'source_sans_proregular';
-    src: url('../fonts/sourcesanspro-regular-webfont.woff2') format('woff2'),
-         url('../fonts/sourcesanspro-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
 }
 @font-face {
     font-family: 'source_sans_prosemibold';
@@ -683,7 +563,6 @@ a:focus img{
          url('../fonts/sourcesanspro-semibold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'source_sans_proSBdIt';
@@ -691,16 +570,119 @@ a:focus img{
          url('../fonts/sourcesanspro-semibolditalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
+} */
+/*logo unused*/
+/* @font-face {
+    font-family: 'sansita_swashedlight';
+    src: url('../fonts/sansitaswashed-variablefont_wght-webfont.woff2') format('woff2'),
+         url('../fonts/sansitaswashed-variablefont_wght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+} */
+/*main text & footer unused*/
+/*sans serif - nunito sans */
+/* @font-face {
+    font-family: 'nunito_sansregular';
+    src: url('../fonts/nunitosans-regular-webfont.woff2') format('woff2'),
+         url('../fonts/nunitosans-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+} */
+/*sans serif - nunito */
+/* @font-face {
+    font-family: 'nunitoregular';
+    src: url('../fonts/nunito-regular-webfont.woff2') format('woff2'),
+         url('../fonts/nunito-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+} */
+/*sans serif - karla */
+/* @font-face {
+    font-family: 'karlaregular';
+    src: url('../fonts/karla-regular-webfont.woff2') format('woff2'),
+         url('../fonts/karla-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+} */
+/*sans serif - lato*/
+/* @font-face {
+    font-family: 'latoblack';
+    src: url('../fonts/lato-black-webfont.woff2') format('woff2'),
+         url('../fonts/lato-black-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
-/*sans serif - roboto */
 @font-face {
+    font-family: 'latoblack_italic';
+    src: url('../fonts/lato-blackitalic-webfont.woff2') format('woff2'),
+         url('../fonts/lato-blackitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'latobold';
+    src: url('../fonts/lato-bold-webfont.woff2') format('woff2'),
+         url('../fonts/lato-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'latobold_italic';
+    src: url('../fonts/lato-bolditalic-webfont.woff2') format('woff2'),
+         url('../fonts/lato-bolditalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'latoitalic';
+    src: url('../fonts/lato-italic-webfont.woff2') format('woff2'),
+         url('../fonts/lato-italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'latolight';
+    src: url('../fonts/lato-light-webfont.woff2') format('woff2'),
+         url('../fonts/lato-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'latolight_italic';
+    src: url('../fonts/lato-lightitalic-webfont.woff2') format('woff2'),
+         url('../fonts/lato-lightitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'latoregular';
+    src: url('../fonts/lato-regular-webfont.woff2') format('woff2'),
+         url('../fonts/lato-regular-webfont.woff') format('woff');
+    font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+    font-family: 'latohairline';
+    src: url('../fonts/lato-thin-webfont.woff2') format('woff2'),
+         url('../fonts/lato-thin-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'latohairline_italic';
+    src: url('../fonts/lato-thinitalic-webfont.woff2') format('woff2'),
+         url('../fonts/lato-thinitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+} */
+/*sans serif - roboto */
+/* @font-face {
     font-family: 'robotoblack';
     src: url('../fonts/roboto-black-webfont.woff2') format('woff2'),
          url('../fonts/roboto-black-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotoblack_italic';
@@ -708,7 +690,6 @@ a:focus img{
          url('../fonts/roboto-blackitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotobold';
@@ -716,7 +697,6 @@ a:focus img{
          url('../fonts/roboto-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotobold_italic';
@@ -724,7 +704,6 @@ a:focus img{
          url('../fonts/roboto-bolditalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotoitalic';
@@ -732,7 +711,6 @@ a:focus img{
          url('../fonts/roboto-italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotolight';
@@ -740,7 +718,6 @@ a:focus img{
          url('../fonts/roboto-light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotolight_italic';
@@ -748,7 +725,6 @@ a:focus img{
          url('../fonts/roboto-lightitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotomedium';
@@ -756,7 +732,6 @@ a:focus img{
          url('../fonts/roboto-medium-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotomedium_italic';
@@ -764,7 +739,6 @@ a:focus img{
          url('../fonts/roboto-mediumitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotoregular';
@@ -772,7 +746,6 @@ a:focus img{
          url('../fonts/roboto-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotothin';
@@ -780,7 +753,6 @@ a:focus img{
          url('../fonts/roboto-thin-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 @font-face {
     font-family: 'robotothin_italic';
@@ -788,49 +760,15 @@ a:focus img{
          url('../fonts/roboto-thinitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
-}
+} */
 /*sans serif - rubik */
-@font-face {
+/* @font-face {
     font-family: 'rubiklight';
     src: url('../fonts/rubik-variablefont_wght-webfont.woff2') format('woff2'),
          url('../fonts/rubik-variablefont_wght-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
-}
-
-/*sans serif - nunito sans */
-@font-face {
-    font-family: 'nunito_sansregular';
-    src: url('../fonts/nunitosans-regular-webfont.woff2') format('woff2'),
-         url('../fonts/nunitosans-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-/*sans serif - nunito */
-
-@font-face {
-    font-family: 'nunitoregular';
-    src: url('../fonts/nunito-regular-webfont.woff2') format('woff2'),
-         url('../fonts/nunito-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-/*sans serif - karla */
-@font-face {
-    font-family: 'karlaregular';
-    src: url('../fonts/karla-regular-webfont.woff2') format('woff2'),
-         url('../fonts/karla-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
+} */
 
 
 /* 1.2. Mobile Fixed Nav */
