--- a/css/style.css
+++ b/css/style.css
@@ -30,27 +30,6 @@
 img {
 	filter: grayscale(100%);
 }
-@media only screen and (min-width: 992px){
-	img{
-		width: 75% !important;
-	}
-}
-.title{
-	overflow-wrap: normal;
-	word-wrap: normal;
-	word-break: normal;
-	hyphens: none;
-	-ms-word-break: normal;
-	-ms-hyphens: none;
-	-moz-hyphens: none;
-	-webkit-hyphens: none;
-}
-h1{
-	line-height: 1.3em;
-	font-size: 2em;
-	margin: .3em;
-}
-
 
 /* CSS Main File for One More Voice (https://onemorevoice.org/) */
 
@@ -113,32 +92,50 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 }
+body.essay .main{
+	font-size: 1em;
+	text-align: left;
+	line-height: 1.6em;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0 .75em 1em .75em;
+	
+}
+@media only screen and (min-width: 480px){
+	body.essay .main{
+		font-size: 1em;
+		padding: 0 1.5em 1em 1.5em;
+	}
+}
 @media only screen and (min-width: 768px){
 	body.essay .main{
+		font-size: 1.1em;
+		padding: 0 2em 1em 2em;
 		/*font-size: .95em;
 		max-width: 46em;*/
-		font-size: 1.1em;
-		max-width: 40em;
+		/* max-width: 40em; */
 	}
 }
 @media only screen and (min-width: 992px){
 	body.essay .main{
-		/*max-width: 42em;*/
+		font-size: 1.2em;
 		max-width: 36em;
+		display: block !important; /* Tied to overlay */
+		/*max-width: 42em;*/
 	}
 	body.fixed-nav{
 		padding-top: 0 !important;
 	}
 }
-body.essay .main{
-	padding: 0 1em 1em 1em;
-}
 h1{
+	font-size: 2em;
+	font-family: 'jacksilverregular';
+	line-height: 1.3em;
+	margin: .3em;
 	/* font-size: 2em; */
 	/* font-family: Georgia, 'Times New Roman', Times, serif; */
 	/* font-size: 3.2em; */
 	/* font-size: 2em; */
-	font-family: 'jacksilverregular';
 	/* line-height: 1em; */
 }
 @media only screen and (min-width: 480px){
@@ -181,8 +178,12 @@ h2{
 	font-size: 1em;
 	font-weight: bold;
 	font-family: 'noto_serifregular';
-	text-align: center;
 	/* color: #2e68ac; */
+}
+@media only screen and (min-width: 480px){
+	h2{
+		text-align: center;
+	}
 }
 h3{
 	font-style: italic;
@@ -234,6 +235,14 @@ body.transcription .title{
 }
 .title{
 	padding-bottom: 0em;
+	overflow-wrap: normal;
+	word-wrap: normal;
+	word-break: normal;
+	hyphens: none;
+	-ms-word-break: normal;
+	-ms-hyphens: none;
+	-moz-hyphens: none;
+	-webkit-hyphens: none;
 }
 body.transcription .title{
 	padding-bottom: 1em;
@@ -258,6 +267,9 @@ body.transcription .title{
 		display: block !important; /* Tied to overlay */
 	}
 }
+.announcement{
+	padding-bottom: .25em;
+}
 @media only screen and (min-width: 480px){
 	.announcement{
 		padding-bottom: .75em;
@@ -272,7 +284,12 @@ body.transcription .title{
 	}
 }
 .organizers{
-	text-align: center;
+	padding-bottom: 1em;
+}
+@media only screen and (min-width: 480px){
+	.organizers{
+		text-align: center;
+	}
 }
 /* .header-title{
 	display: none;
@@ -290,6 +307,11 @@ img,
 	margin-right: auto;
 	width: 100%;
 	display: inline-block;
+}
+@media only screen and (min-width: 992px){
+	img{
+		width: 75% !important;
+	}
 }
 .image-border{
 	border: 1px solid gray;
@@ -415,19 +437,6 @@ img,
 		position: absolute;
 	}
 } */
-.main{
-	font-size: 1.3em;
-	text-align: left;
-	line-height: 1.6em;
-	margin-left: auto;
-	margin-right: auto;
-}
-@media only screen and (min-width: 992px){
-	.main{
-		font-size: 1.2em;
-		display: block !important; /* Tied to overlay */
-	}
-}
 /* for essay title with subtitle */
 .title-with-subtitle{
 	margin-bottom: .5em;
@@ -482,10 +491,10 @@ img,
 }
 .footer{
 	font-size: 1em;
-	/* font-family: Arial, Geneva, Tahoma, sans-serif; */
 	text-align: center;
 	line-height: 1.6em;
-	padding-top: 1em;
+	padding: 1em 1em 0 1em;
+	/* font-family: Arial, Geneva, Tahoma, sans-serif; */
 }
 @media only screen and (min-width: 768px){
 	.footer{
@@ -1380,7 +1389,7 @@ hr{
 	background-color: gray;
 	height: 1px;
 	border: 0;
-	width: 100%;
+	width: 95%;
 }
 .thick-hr{
 	overflow: visible; /* For IE */
