--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ body.transcription .title{
 @media only screen and (min-width: 992px){
 	.title,
 	body.transcription .title{
-		padding-bottom: 1em;
+		padding: 1em 0;
 		display: block !important; /* Tied to overlay */
 	}
 }
