--- a/css/style.css
+++ b/css/style.css
@@ -92,12 +92,14 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 }
+body.essay{
+	margin: 0;
+}
 body.essay .main{
 	font-size: 1em;
 	text-align: left;
 	line-height: 1.6em;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto;
 	padding: 0 .75em 1em .75em;
 	
 }
