--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,30 @@ img,
 .image-border{
 	border: 1px solid gray;
 }
+.content-holder{
+	background: #e6e6e6;
+}
+@media screen and (min-width:320px) {
+	.content-holder{
+		min-height: 183px;
+	}
+}
+@media screen and (min-width:480px) {
+	.content-holder{
+		min-height: 277px;
+	}
+}
+@media screen and (min-width:768px) {
+	.content-holder{
+		min-height: 446px;
+	}
+}
+@media screen and (min-width:992px) {
+	.content-holder{
+		min-height: 432px;
+	}
+}
+
 /* @media screen and (min-width:480px) {
 	.responsive-image70 {
 		width: 70%;
