--- a/css/style.css
+++ b/css/style.css
@@ -1474,6 +1474,12 @@ hr{
 .small{
 	font-size: .9em;
 }
+.smaller{
+	font-size: .8em;
+}
+.smallest{
+	font-size: .7em;
+}
 .smallcaps{
 	font-variant: small-caps;
 }
