--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ Table of Contents
 ** Main Site Colors **
 
 ** 1.0. Main CSS **
-1.1. Main Components 
+1.1. Main Components
+1.1.1. Carousel 
 1.2. Mobile Fixed Nav
 1.3. Navbar
 1.4. Overlay
@@ -865,6 +866,211 @@ a:focus img{
     font-weight: normal;
     font-style: normal;
 } */
+
+
+/* 1.1.1. Carousel */
+
+/* 	Carousel adapted from https://www.w3.org/TR/wai-aria-practices-1.1/examples/carousel/carousel-1.html */
+.carousel .carousel-inner{
+	max-width: 900px;
+	margin: 0 auto;
+	position: relative;
+	}
+@media only screen and (min-width: 992px){
+	.carousel .carousel-inner{
+		width: 75% !important;
+	}
+}
+/* Carousel items */
+.carousel .carousel-item{
+	line-height: 0;
+	width: 100%;
+	overflow: hidden;
+	position: relative;
+	display: none;
+}
+.carousel .carousel-item.active{
+	display: block;
+}
+/* More like bootstrap, less accessible */
+.carousel .carousel-items{
+	border: solid 1px gray;
+}
+.carousel .carousel-items.focus{
+	border-color: white;
+	outline: solid 3px black; /*#005a9c*/
+}
+/* Carousel images */
+.carousel .carousel-item .carousel-image{
+	background: #e6e6e6;
+}
+@media screen and (min-width:320px){
+	.carousel .carousel-item .carousel-image{
+		min-height: 183px;
+	}
+}
+@media screen and (min-width:480px){
+	.carousel .carousel-item .carousel-image{
+		min-height: 277px;
+	}
+}
+@media screen and (min-width:768px){
+	.carousel .carousel-item .carousel-image{
+		min-height: 446px;
+	}
+}
+@media screen and (min-width:992px){
+	.carousel .carousel-item .carousel-image{
+		min-height: 432px;
+	}
+}	
+.carousel .carousel-item .carousel-image img{
+	height: 100%;
+	width: 100% !important;
+	object-fit:cover;
+	-o-object-fit: cover;
+	overflow: hidden;
+	object-position: 50% 50%;
+}
+@media screen and (min-width:320px){
+	.carousel .carousel-item .carousel-image img{
+		max-height: 183px;
+	}
+}
+@media screen and (min-width:480px){
+	.carousel .carousel-item .carousel-image img{
+		max-height: 277px;
+	}
+}
+@media screen and (min-width:768px){
+	.carousel .carousel-item .carousel-image img{
+		max-height: 446px;
+	}
+}
+@media screen and (min-width:992px){
+	.carousel .carousel-item .carousel-image img{
+		max-height: 432px;
+	}
+}
+/* Carousel caption */
+.carousel .carousel-item .carousel-caption a{
+	text-decoration: underline;
+}
+.carousel .carousel-item .carousel-caption a,
+.carousel .carousel-item .carousel-caption span.contrast{
+	background-color: rgba(0, 0, 0, 0.65);
+	border: 2px solid transparent;
+	border-radius: 5px;
+	margin: 0;
+	padding: 0 6px;
+	display: inline-block;
+}
+.carousel .carousel-item .carousel-caption h3 a{
+	color: #fff;
+	font-size: .8em;
+	font-weight: 300;
+	font-style: normal;
+}
+@media screen and (min-width:768px){
+	.carousel .carousel-item .carousel-caption h3 a{
+		font-size: .9em;
+	}
+}
+.carousel .carousel-item .carousel-caption a:hover,
+.carousel .carousel-item .carousel-caption span.contrast:hover{
+	background-color: rgba(0, 0, 0, 1);
+	margin: 0;
+}
+.carousel .carousel-item .carousel-caption a:focus{
+	background-color: rgba(0, 0, 0, 1);
+	border-color: #fff;
+	margin: 0;
+}
+.carousel .carousel-item .carousel-caption p{
+	font-size: 1em;
+	line-height: 1.5;
+	margin-bottom: 0;
+	right: 0;
+	bottom: 2em;
+	left: 0;
+}
+.carousel .carousel-item .carousel-caption{
+	color: #fff;
+	text-align: center;
+	line-height: 1.6em;
+	padding: 20px 0;
+	right: 6px;
+	bottom: -25px;
+	position: absolute;
+}
+/* Shared CSS for Pause, Next and Previous Slide Controls */
+.carousel .controls button{
+	background-color: transparent;
+	border: none;
+	outline: none;
+	padding: 0;
+	z-index: 10;
+	top: 5px;
+	position: absolute;
+}
+.carousel .controls button svg rect.background{
+	fill: black;
+	stroke: black;
+	stroke-width: 1px;
+	opacity: 0.6;
+}
+.carousel .controls button svg rect.border{
+	fill: transparent;
+	stroke: transparent;
+	stroke-width: 2px;
+}
+/* Next and Previous Slide Controls */
+.carousel .controls button svg polygon{
+	fill: white;
+	stroke: white;
+	stroke-width: 2;
+	opacity: 1;
+}
+.carousel .controls button.previous{
+	top: 10px;
+	right: 50px;
+}
+.carousel .controls button.next{
+	top: 10px;
+	right: 6px;
+}
+/* Pause Control */
+.carousel .controls button.rotation{
+	top: 10px;
+	left: 6px;
+}
+.carousel .controls button.rotation svg polygon.pause{
+	fill: transparent;
+	stroke-width: 4;
+	stroke: transparent;
+}
+.carousel .controls button.rotation svg polygon.play{
+	fill: transparent;
+	stroke-width: 1;
+	stroke: transparent;
+}
+.carousel .controls button.rotation.pause svg polygon.pause,
+.carousel .controls button.rotation.play svg polygon.play{
+	fill: white;
+	stroke: white;
+}
+/* Common focus styling for svg buttons */
+.carousel .controls button:focus rect.background,
+.carousel .controls button:hover rect.background,
+.carousel .controls button:focus rect.border,
+.carousel .controls button:hover rect.border{
+	fill: black ; /*#005a9c*/
+	stroke: black; /*#005a9c*/
+	opacity: 1;
+}
+.carousel .controls button:focus rect.border{
+	stroke: white;
+}
 
 
 /* 1.2. Mobile Fixed Nav */
