update css to remove grayscale

--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,9 @@
 		display: none;
 	}
 }
-img {
+/* img {
 	filter: grayscale(100%);
-}
+} */
 
 /* CSS Main File for One More Voice (https://onemorevoice.org/) */
 
